--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,22 +6,22 @@ projectTargetSdkVersion = "34"
 projectCompileSdkVersion = "34"
 projectVersionCode = "1"
 
-kotlin = "1.9.10"
+kotlin = "1.9.22"
 kotlinter = "3.16.0"
-ksp = "1.9.10-1.0.13"
+ksp = "1.9.22-1.0.17"
 kotlinxImmutableCollection = "0.3.5"
-androidGradlePlugin = "8.1.3"
+androidGradlePlugin = "8.1.4"
 
 ktx = "1.12.0"
 
-composeBOM = "2023.10.01"
-composeActivity = "1.8.0"
+composeBOM = "2024.01.00"
+composeActivity = "1.8.2"
 composeCoil = "2.2.2"
-composeCompiler = "1.5.3"
+composeCompiler = "1.5.8"
 composeMaterial3 = "1.1.2"
 
 detekt = "1.23.1"
-hilt = "2.48"
+hilt = "2.50"
 androidHiltCompiler = "1.1.0"
 hiltNavigationCompose = "1.1.0"
 hiltWork = "1.1.0"
@@ -30,11 +30,11 @@ lottieAnimation = "6.1.0"
 
 coroutinesCore = "1.7.3"
 
-lifeCycle = "2.6.2"
-lifeCycleViewModelKtx = "2.6.2"
-lifeCycleRuntimeCompose = "2.6.2"
+lifeCycle = "2.7.0"
+lifeCycleViewModelKtx = "2.7.0"
+lifeCycleRuntimeCompose = "2.7.0"
 
-navigationCompose = "2.7.5"
+navigationCompose = "2.7.6"
 
 retrofit = "2.9.0"
 loggingInterceptor = "4.11.0"
@@ -42,7 +42,7 @@ chucker = "3.5.2"
 kotlinx-serialization = "1.6.0"
 kotlinx-serialization-converter = "1.0.0"
 
-sqldelight = "2.0.0"
+sqldelight = "2.0.1"
 
 junit = "4.13.2"
 junitExt = "1.1.5"
@@ -53,12 +53,12 @@ runner = "1.5.2"
 
 startupRuntime = "1.1.1"
 
-workRuntimeKtx = "2.8.1"
+workRuntimeKtx = "2.9.0"
 
 windowsSizeClass = "1.1.2"
-adaptive = "0.26.2-beta"
+adaptive = "0.27.0"
 
-kotest = "5.7.2"
+kotest = "5.8.0"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "ktx" }
